spacing in the cards is fixed

--- a/style.css
+++ b/style.css
@@ -91,50 +91,6 @@ a {
   color: red;
 }
 
-/* FLEX BOX FOR SIDE PANELS */
-/* .main-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-} */
-/* 
-.sub-flex-top {
-  display: flex;
-  flex-direction: row;
-  margin: 1rem 1rem 0rem 1rem;
-} */
-
-/* .sub-flex-bottom {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: baseline;
-  margin: 1rem 0rem 0.5rem 1rem;
-} */
-
-/* .card-icon {
-  max-width: 13%;
-}
-
-.card-user-task {
-  padding-top: 1rem;
-  padding-left: 0.5rem;
-}
-
-.card-date {
-  margin-left: 10%;
-}
-.card-icon-actions {
-  max-width: 6%;
-  /* margin: 0, 1rem; 
-}*/
-
-/* .actions-icon-boostrap {
-  display: block;
-  max-width: 100%;
-  height: auto;
-} */
-
 @media screen and (max-width: 600px) {
   .topnav a,
   .topnav-right {
@@ -160,19 +116,6 @@ a {
   -webkit-appearance: none;
   appearance: none;
 }
-
-/* .nadiya {
-  background-image: url(assets/noun-animal-1951473_1.svg);
-  background-position: center;
-}
-.megan {
-  background-image: url(assets/noun-animal-19514641.svg);
-  background-position: center;
-}
-.jesaca {
-  background-image: url(assets/noun-mongoose-19514281.svg);
-  background-position: center;
-} */
 
 .user-selector input:active + .users {
   opacity: 0.5;
